# sje

./: Cargo.toml  README.md  publish.sh  rustfmt.toml
.github/workflows/: rust.yml
sje/: Cargo.toml
sje/array_of_objects/: custom.rs  iter.rs
sje/benches/: l2_update.rs  ticker.rs  trade.rs
sje/src/: error.rs  lib.rs  macros.rs  scanner.rs
sje/tests/: array_of_objects.rs  decoder.rs
sje_derive/: Cargo.toml
sje_derive/src/: lib.rs
