[workspace.package]
version = "0.0.9"
edition = "2024"
license = "MIT"
description = "Fast JSON deserialisation and serialisation schema based framework."
documentation = "https://docs.rs/sje"
repository = "https://github.com/HaveFunTrading/sje"
keywords = ["json", "low-latency", "parser", "decoder", "schema"]
categories = ["encoding", "parser-implementations", "parsing", "finance"]
rust-version = "1.85.1"

[workspace]
resolver = "3"
members = [
    "sje",
    "sje_derive"
]

[profile.bench]
lto = true
codegen-units = 1
debug = false
