[package]
name = "sje"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
readme = "../README.md"
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
sje_derive = { path = "../sje_derive", version = "0.0.8", optional = true }
memchr = "2.7.4"
thiserror = "2.0.11"

[dev-dependencies]
sje_derive = { path = "../sje_derive" }
criterion = "0.5.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

[features]
default = []
derive = ["dep:sje_derive"]

[[bench]]
name = "trade"
path = "benches/trade.rs"
harness = false

[[bench]]
name = "ticker"
path = "benches/ticker.rs"
harness = false

[[bench]]
name = "l2_update"
path = "benches/l2_update.rs"
harness = false
