[package]
name = "sje_derive"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
readme = "../README.md"
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1.0.93"
heck = "0.5.0"

[lib]
proc-macro = true
